# CV-Project

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
core/: cross_validator.py  dataset.py  evaluator.py  global_vars.py  helpers.py  main.py  model_m.py
