[metadata]
name = CV-Project
description = A Computer Vision Project
author = Luca Haucap, Jan Ritschel, Noah Michels
author_email = jan.ritschel@outlook.de
url = https://github.com/JanRitschel/CV-Project
license = Apache 2.0
long_description = README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = True
install_requires = 
    numpy
    tqdm
    matplotlib
    scipy
    hypothesis
python_requires = >= 3.11
